# personalasisstant

./: .dockerignore  .env  .env.example  .gitignore  .prettierignore  README.md  capacitor.config.ts  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
db/: Dockerfile  (+5 more)
services/assistant-runtime/: Dockerfile  pyproject.toml
services/assistant-runtime/migrations/: 0001_operational_foundation.sql  0002_telegram_delivery_foundation.sql  0003_provider_connectors_phase3.sql  0004_provider_sync_hardening_phase4e.sql  0005_auth_sessions.sql  0006_action_draft_content.sql  0007_onebrain_tombstone_state.sql  0008_rls_account_scope.sql  README.md
services/assistant-runtime/scripts/: export_openapi.py
services/assistant-runtime/src/assistant_runtime/: __init__.py  config.py  contracts.py  health.py  interfaces.py  logging.py  observability.py  runtime_stores.py  schemas.py
services/assistant-runtime/src/assistant_runtime/api/: __init__.py  app.py  auth.py  main.py  openapi.py
services/assistant-runtime/src/assistant_runtime/auth/: identity.py
services/assistant-runtime/src/assistant_runtime/channels/: __init__.py  telegram.py
services/assistant-runtime/src/assistant_runtime/domain/: __init__.py  action_store.py  ask.py  brief.py  drafts.py  outbox.py  providers.py  queue.py  sessions.py  workday.py
services/assistant-runtime/src/assistant_runtime/persistence/: __init__.py  postgres.py  scope.py
services/assistant-runtime/src/assistant_runtime/policy/: __init__.py  action_policy.py
services/assistant-runtime/src/assistant_runtime/providers/: __init__.py  model_router.py  morning_brief.py  oauth.py  onebrain.py  onebrain_events.py  read_adapters.py  reliability.py  space_routing.py  sync.py  token_refresh.py  tombstones.py  workday.py
services/assistant-runtime/src/assistant_runtime/secrets/: __init__.py  provider.py
services/assistant-runtime/src/assistant_runtime/security/: __init__.py  content_sanitizer.py  (+1 more)
services/assistant-runtime/tests/: conftest.py  test_action_store.py  test_api.py  test_assistant_ask.py  test_auth.py  test_drafts.py  test_morning_brief.py  test_onebrain_client.py  test_outbox.py  test_policy.py  test_provider_connectors.py  test_provider_reliability.py  test_rls_conformance.py  test_scheduler.py  test_secret_provider.py  test_security_pipeline.py  test_space_routing.py  test_telegram_binding.py  test_telegram_commands.py  test_tombstones.py  test_workday_loop.py
(+959 files in other folders)
