[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onebrain-assistant-runtime"
version = "0.1.0"
description = "FastAPI API and worker runtime for the OneBrain assistant"
requires-python = ">=3.13"
dependencies = [
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "redis>=5.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0"
]

[project.scripts]
assistant-api = "assistant_runtime.api.main:run"
assistant-worker = "assistant_runtime.worker.main:run"
assistant-export-openapi = "assistant_runtime.api.openapi:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection in argument defaults (Depends/Query/Header) is the
# idiomatic pattern; treat these as immutable so B008 does not flag them.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Security",
]
